[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[[bin]]
name = "hello_world"
path = "src/hello_world.rs"

[[bin]]
name = "guessing_game"
path = "src/guessing_game.rs"

[[bin]]
name = "variables"
path = "src/variables.rs"

[[bin]]
name = "data_types"
path = "src/data_types.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"